k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ostad-production
  labels:
    name: ostad-production
    environment: production
    app: ostad-capstone
